scripts/products_output.txt
  File "/home/z/my-project/scripts/generate_products.py", line 251
    features:['Luxury Design', 'Stainless Steel', 'Japanese Quartz', 'Gift Box', 'Premium Finish', 'Elegant Dial'],
            ^
SyntaxError: positional argument follows keyword argument
